--- a/package.json
+++ b/package.json
@@ -46,7 +46,7 @@
     "posttest": "eslint . --ext .ts --config .eslintrc",
     "prepack": "rm -rf lib && tsc -b && oclif-dev readme",
     "test": "echo NO TESTS",
-    "version": "oclif-dev readme && git add README.md"
+    "version": "oclif-dev manifest && oclif-dev readme && git add README.md"
   },
   "types": "lib/index.d.ts"
 }
