--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
   "bugs": "https://github.com/gesa/plex-dvr/issues",
   "dependencies": {
     "@oclif/command": "^1.8.16",
+    "@oclif/errors": "^1.3.5",
     "tslib": "^2.3.1",
     "winston": "^3.3.3"
   },
