Upgrade to Oclif v2 (actually v3 but the diff is trivial)

--- a/.eslintrc
+++ b/.eslintrc
@@ -1,8 +1,19 @@
 {
   "extends": [
+    "eslint:recommended",
     "oclif",
     "oclif-typescript",
-    "prettier",
-    "prettier/@typescript-eslint"
-  ]
+    "prettier"
+  ],
+  "env": {
+    "es6": true
+  },
+  "parser": "@typescript-eslint/parser",
+  "parserOptions": {
+    "ecmaVersion": 2021,
+    "sourceType": "module"
+  },
+  "rules": {
+    "unicorn/prefer-node-protocol": "off"
+  }
 }
