--- a/package.json
+++ b/package.json
@@ -1,31 +1,36 @@
 {
   "name": "plex-dvr",
   "description": "A postprocessing script for the Plex DVR. Removes commercials, adds chapter markers, extracts captions as subtitles, and converts to mkv. Requires comskip, comcut, ccextractor, ffmpeg, and HandbrakeCLI.",
-  "version": "1.4.1",
+  "version": "1.4.2",
   "author": "Aki Rose @gesa <hi@akiro.se>",
   "bin": {
     "plex-dvr": "./bin/run"
   },
   "bugs": "https://github.com/gesa/plex-dvr/issues",
   "dependencies": {
-    "@oclif/command": "^1.8.16",
-    "@oclif/errors": "^1.3.5",
+    "@oclif/core": "^1.9.0",
+    "@oclif/plugin-help": "^5.1.12",
+    "@oclif/plugin-version": "^1.0.4",
     "tslib": "^2.3.1",
-    "winston": "^3.3.3"
+    "winston": "^3.6.0"
   },
   "devDependencies": {
-    "@oclif/dev-cli": "^1.26.10",
-    "@types/node": "^17.0.5",
-    "eslint": "^7.32.0",
+    "@oclif/test": "^2.1.0",
+    "@types/jest": "^27.5.1",
+    "@types/node": "^17.0.19",
+    "@typescript-eslint/eslint-plugin": "^5.27.0",
+    "eslint": "^8.9.0",
     "eslint-config-oclif": "^4.0.0",
-    "eslint-config-oclif-typescript": "^0.1.0",
-    "eslint-config-prettier": "^6.11.0",
+    "eslint-config-oclif-typescript": "^1.0.2",
+    "eslint-config-prettier": "^8.4.0",
+    "eslint-plugin-unicorn": "^42.0.0",
+    "oclif": "^3.0.1",
     "prettier": "^2.5.1",
-    "ts-node": "^10.4.0",
-    "typescript": "^4.5.4"
+    "ts-node": "^10.5.0",
+    "typescript": "^4.7.2"
   },
   "engines": {
-    "node": ">=17.0.0"
+    "node": ">=16.0.0"
   },
   "files": [
     "/bin",
@@ -38,15 +43,24 @@
   "license": "MIT",
   "main": "lib/index.js",
   "oclif": {
+    "plugins": [
+      "@oclif/plugin-help",
+      "@oclif/plugin-version"
+    ],
+    "additionalHelpFlags": [
+      "-h"
+    ],
+    "helpClass": "./lib/help",
     "bin": "plex-dvr",
-    "helpClass": "./lib/info"
+    "commands": "./lib/commands",
+    "default": "plex-dvr"
   },
   "repository": "gesa/plex-dvr",
   "scripts": {
     "posttest": "eslint . --ext .ts --config .eslintrc",
-    "prepack": "rm -rf lib && tsc -b && oclif-dev readme",
+    "prepack": "rm -rf lib && tsc -b && oclif readme",
     "test": "nyc --extension .ts mocha --forbid-only \"test/**/*.test.ts\"",
-    "version": "oclif-dev readme && git add README.md"
+    "version": "oclif readme && git add README.md"
   },
   "types": "lib/index.d.ts"
 }
