--- a/package.json
+++ b/package.json
@@ -11,22 +11,22 @@
     "@oclif/core": "^1.9.0",
     "@oclif/plugin-help": "^5.1.12",
     "@oclif/plugin-version": "^1.0.4",
-    "tslib": "^2.3.1",
-    "winston": "^3.6.0"
+    "tslib": "^2.4.0",
+    "winston": "^3.7.2"
   },
   "devDependencies": {
     "@oclif/test": "^2.1.0",
-    "@types/jest": "^27.5.1",
-    "@types/node": "^17.0.19",
+    "@types/node": "^17.0.36",
     "@typescript-eslint/eslint-plugin": "^5.27.0",
-    "eslint": "^8.9.0",
+    "@typescript-eslint/parser": "^5.27.0",
+    "eslint": "^8.16.0",
     "eslint-config-oclif": "^4.0.0",
     "eslint-config-oclif-typescript": "^1.0.2",
-    "eslint-config-prettier": "^8.4.0",
+    "eslint-config-prettier": "^8.5.0",
     "eslint-plugin-unicorn": "^42.0.0",
     "oclif": "^3.0.1",
-    "prettier": "^2.5.1",
-    "ts-node": "^10.5.0",
+    "prettier": "^2.6.2",
+    "ts-node": "^10.8.0",
     "typescript": "^4.7.2"
   },
   "engines": {
@@ -57,9 +57,7 @@
   },
   "repository": "gesa/plex-dvr",
   "scripts": {
-    "posttest": "eslint . --ext .ts --config .eslintrc",
     "prepack": "rm -rf lib && tsc -b && oclif readme",
-    "test": "nyc --extension .ts mocha --forbid-only \"test/**/*.test.ts\"",
     "version": "oclif readme && git add README.md"
   },
   "types": "lib/index.d.ts"
